# Timnt

./: .replit  README  README.md  cards.json  main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html  test.html
