[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "langchain-groq==0.2.1",
    "langchain==0.3.10",
    "openai==1.57.0",
    "langchain-core>=0.3.63",
    "pydantic>=2.11.7",
]
